# filedb

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO  rustfmt.toml
expected/: add_new_dir_within_root_1  add_new_dir_within_root_2  decompress_all  mv_after  mv_before  simple
src/: lib.rs  main.rs
testdata/compressed/: test.tar  test.tar.xz  test.tgz
